===============
Stalker Changes
===============

0.2.0.b7
========

* **SOM**:

  * **Update:** **Task.schedule_constraint** is now reflected to the tjp file
    correctly.
  * **Fix:** **check_circular_dependency()** now checks if the **entity** and
    the **other_entity** are the same.

* **WebUI:**

  * **Fix:** GanttChart  view of Assets, Shots,Sequences or Tasks now displays
    only the children and parents of that Task derivative.
  * **Update:** Task create/update dialog now displays the full hierarchy in
    parent/dependent task listings.
  * **Fix:** TimeLog create/update dialog now displays the default times
    correctly when creating a new TimeLog.
  * **Fix:** TimeLog create/update view callables are now checking if there
    will be any OverBookedError raised.
  * **Fix:** Task create/update dialog now will not list the task itself in
    parent and dependent task lists, if the UI is called with a Task instance
    ({{task}} is not None).
  * **JQueryGantt:**
  
    * **Update:** Context menu is now visible in ``taskRow`` (grid editor).

0.2.0.b6
========

* **SOM**:
  
  * **Fix:** Fixed **LocalSession._write_data()**, previously it was not
    creating the local session folder.
  * **New:** Added a new method called **LocalSession.delete()** to remove the
    local session file.
  * **Update:** **Link.full_path** can now be set to an empty string. This is
    updated in this way for **Version** class.
  * **Update:** Updated the formatting of **SimpleEntity.nice_name**, it is now
    possible to have uppercase letters and camel case format will be preserved.
  * **Update**: **Version.take_name** formatting is enhanced.
  * **New**: **Task** class is now mixed in with **ReferenceMixin** making it
    unnecessary to have **Asset**, **Shot** and **Sequence** classes all mixed
    in individually. Thus removed the **ReferenceMixin** from **Asset**,
    **Shot** and **Sequence** classes.